# graph-llm-agents

./: .gitignore  README.md  backup.toml  pyproject.toml
langgraph/: agentic-search.ipynb  gemini-react-scratch.ipynb  langgraph-components.ipynb  langgraph-persistance-streaming.ipynb  langgraph-reply-email.ipynb  react-from-scratch.ipynb
langgraph/prompts/: draft-email-analysis.jinja  draft-writer-llama3.jinja  email-category-llama3.jinja  email-llama3.jinja  gemini-react.jinja  groq-llama3-rag.jinja  openai-react-langgraph.jinja  research-router.jinja  rewrite-email.jinja  rewrite-router-llama3.jinja  search-rag-llama3.jinja
llama3-finetune-products/: expand_product.ipynb  products.jsonl
llama3-finetune-products/data/: products.jsonl
multimodal-rag/: chroma-multimodal-rag.ipynb
notebooks/: autogen-coding-financial-analysis.ipynb  claudette-intro.ipynb  cypher_llama3_finetuning.ipynb  dialog-feature-extraction.ipynb  dspy-with-kg.ipynb  function-calling-for-structure.ipynb  function-calling-nexusraven.ipynb  function-calling-web-search.ipynb  gemini-context-caching.ipynb  gemini-knowledge-graph.ipynb  graphrag-events.ipynb  groq-knowledge-graph.ipynb  interface-with-external-interfaces.ipynb  jinja2-prompting.ipynb  kg-cypher.ipynb  kg-graph-embeddings.ipynb  knowledge-graph-construction.ipynb  llama_index_neo4j_custom_retriever.ipynb  mistral-function-calling.ipynb  nested-function-calling.ipynb  ollama-langgraph.ipynb  openai-function-calling-ext.ipynb  openai-function-calling.ipynb  paper-of-the-week.txt  reflection.ipynb  reflection_and_blogpost_writing.ipynb  reflexion.ipynb  sequential-chats-and-customer-onboarding.ipynb  tool_use_and_conversational_chess.ipynb  toy_database.db
notebooks/coding/: download_and_plot_stocks.py  stock_ytd_gains.py  stock_ytd_gains.sh  tmp_code_16f05406f33d4d3c0213c2c70522a178.sh  tmp_code_2f699df2454f896a999e636e008cefaa.py
notebooks/dspy_rag_chroma/: chroma.sqlite3
notebooks/prompts/: extended.jinja
pydantic/: pydantic101.py
rag-agents-testing/: agent-testing.ipynb  corrective-rag-agent-testing.ipynb  ollama-rag-gemma2.ipynb
rag-agents-testing/prompts/: rag-prompt.jinja  rag-react.jinja
