[virtualenvs]
in-project = true

[tool.poetry]
name = "graph-llm-agents"
version = "0.1.0"
description = "A hub for exploring the integration of graph-based orchestration with LLMs, focusing on the development and experimentation of multi-actor LLM applications."
authors = ["Martin Fabbri <martin.fabbri.a@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.8"}
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langgraph = "^0.0.69"
langchainhub = "^0.1.20"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.3"
langchain-fireworks = "^0.1.3"
langchain-anthropic = "^0.1.15"
google-generativeai = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
