[virtualenvs]
in-project = true

[tool.poetry]
name = "graph-llm-agents"
version = "0.1.0"
description = "A hub for exploring the integration of graph-based orchestration with LLMs, focusing on the development and experimentation of multi-actor LLM applications."
authors = ["Martin Fabbri <martin.fabbri.a@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.6"
langchain-core = "^0.2.10"
langchain-community = "^0.2.6"
langgraph = "^0.1.5"
langchainhub = "^0.1.20"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.3"
langchain-fireworks = "^0.1.4"
langchain-anthropic = "^0.1.17"
google-generativeai = "^0.7.0"
scipy = "^1.13.1"
tenacity = "^8.4.1"
tiktoken = "^0.7.0"
termcolor = "^2.4.0"
ipywidgets = "^8.1.3"
chess = "^1.10.0"
matplotlib = "^3.9.0"
datasets = "^2.20.0"
gliner = "^0.2.4"
wikipedia = "^1.4.0"
neo4j = "^5.21.0"
claudette = "^0.0.4"
nbdev = "^2.3.25"
ollama = "^0.2.1"
jsonlines = "^4.0.0"
llama-index = "^0.10.50"
llama-index-graph-stores-neo4j = "^0.2.5"
llama-index-program-openai = "^0.1.6"
llama-index-llms-openai = "^0.1.23"
langchain-openai = "^0.1.13"
chromadb = "^0.5.3"
yfiles-jupyter-graphs = "^1.7.2"
langchain-groq = "^0.1.6"
langchain-chroma = "^0.1.2"
duckduckgo-search = "^6.1.7"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
